--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+v0.7.0
+* size-method now allows for a param 'sAttribute'
+* hits-method reworked, allows for names query vectors
+
+v0.7.0
+* rcqp hat moved to suggests, to facilitate installation
+
+
+
 v0.6.3
 * more generic implementation of as.markdown-method to prepare use of templates
 * LICENSE file updated
